# bad-shark

./: .gitignore  Cargo.toml  README.md  links
src/: camera.rs  car.rs  graphics.rs  lib.rs  main.rs  points.rs  units.rs
src/car/: front.rs  members.rs  rear.rs
src/car/members/: a_arm.rs  h_arm.rs  link.rs
src/graphics/: color.rs  input.rs  vertex.rs
src/points/: front.rs  members.rs  rear.rs
