[package]
name = "bad-shark"
version = "0.1.0"
edition = "2021"
authors = ["Akari Harada <akaritwo0two@gmail.com>"]
#repository = "https://github.com/Akari202/bad-shark"
license = "GPL-3"

[dependencies]
rayon = "1.10.0"
vec-utils = { version = "0.1.0", path = "../vec-utils" }
log = "0.4.21"
env_logger = "0.11.2"
itertools = "0.13.0"
